WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151566
REGRESSION (
r190983
): Non-element, non-text nodes should not be distributed to slots
https://bugs.webkit.org/show_bug.cgi?id=151566
Summary
REGRESSION (r190983): Non-element, non-text nodes should not be distributed t...
Antti Koivisto
Reported
2015-11-23 06:09:58 PST
It is not useful and we don't do invalidation correctly.
Attachments
patch
(3.79 KB, patch)
2015-11-23 06:17 PST
,
Antti Koivisto
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2015-11-23 06:10:40 PST
<
rdar://problem/23430177
>
Antti Koivisto
Comment 2
2015-11-23 06:17:17 PST
Created
attachment 266088
[details]
patch
Antti Koivisto
Comment 3
2015-11-24 04:41:46 PST
https://trac.webkit.org/r192763
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug