REGRESSION (r190983): Non-element, non-text nodes should not be distributed to slots https://bugs.webkit.org/show_bug.cgi?id=151566 rdar://problem/23430177

Reviewed by Zalan Bujtas.

Source/WebCore:

We don't invalidate slot assignments except for text or element children. Fix by not
not assigning other nodes to slots as it is not useful.

Test: fast/html/details-comment-crash.html

* dom/SlotAssignment.cpp:
(WebCore::slotNameFromSlotAttribute):
(WebCore::SlotAssignment::findAssignedSlot):
(WebCore::SlotAssignment::assignSlots):

LayoutTests:

* fast/html/details-comment-crash-expected.html: Added.
* fast/html/details-comment-crash.html: Added.



Canonical link: https://commits.webkit.org/169724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192763 268f45cc-cd09-0410-ab3c-d52691b4dbfc